force-app/main/default/objects/sma__MAClick2Create__c/sma__MAClick2Create__c.object-meta.xml
<CustomObject>
    <label>MapAnything Click-2-Create Setting</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>MA Click-2-Create Setting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Click-2-Create Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>