force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__DefaultField__c.field-meta.xml
<CustomField>
    <fullName>sma__DefaultField__c</fullName>
    <label>Default Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>