force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__FieldSetOptions__c.field-meta.xml
<CustomField>
    <fullName>sma__FieldSetOptions__c</fullName>
    <label>Field Set Options</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>