force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__MapClickCity__c.field-meta.xml
<CustomField>
    <fullName>sma__MapClickCity__c</fullName>
    <label>Map Click City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>