force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__MapClickCountry__c.field-meta.xml
<CustomField>
    <fullName>sma__MapClickCountry__c</fullName>
    <label>Map Click Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>