force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__MapClickLatitude__c.field-meta.xml
<CustomField>
    <fullName>sma__MapClickLatitude__c</fullName>
    <label>Map Click Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>