force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__MapClickLongitude__c.field-meta.xml
<CustomField>
    <fullName>sma__MapClickLongitude__c</fullName>
    <label>Map Click Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>