force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__MapClickName__c.field-meta.xml
<CustomField>
    <fullName>sma__MapClickName__c</fullName>
    <label>Map Click Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>