force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__MapClickState__c.field-meta.xml
<CustomField>
    <fullName>sma__MapClickState__c</fullName>
    <label>Map Click State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>