force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__MapClickStreet__c.field-meta.xml
<CustomField>
    <fullName>sma__MapClickStreet__c</fullName>
    <label>Map Click Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>