force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__MyPositionCity__c.field-meta.xml
<CustomField>
    <fullName>sma__MyPositionCity__c</fullName>
    <label>My Position City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>