force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__MyPositionLatitude__c.field-meta.xml
<CustomField>
    <fullName>sma__MyPositionLatitude__c</fullName>
    <label>My Position Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>