force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__MyPositionLongitude__c.field-meta.xml
<CustomField>
    <fullName>sma__MyPositionLongitude__c</fullName>
    <label>My Position Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>