force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__MyPositionPostalCode__c.field-meta.xml
<CustomField>
    <fullName>sma__MyPositionPostalCode__c</fullName>
    <label>My Position Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>