force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__MyPositionStreet__c.field-meta.xml
<CustomField>
    <fullName>sma__MyPositionStreet__c</fullName>
    <label>My Position Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>