force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>sma__ObjectAPIName__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>