force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__POICity__c.field-meta.xml
<CustomField>
    <fullName>sma__POICity__c</fullName>
    <label>POI City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>