force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__POICountry__c.field-meta.xml
<CustomField>
    <fullName>sma__POICountry__c</fullName>
    <label>POI Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>