force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__POIDefaultValue__c.field-meta.xml
<CustomField>
    <fullName>sma__POIDefaultValue__c</fullName>
    <label>POI Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>