force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__POIFieldSet__c.field-meta.xml
<CustomField>
    <fullName>sma__POIFieldSet__c</fullName>
    <inlineHelpText>Developer/API Name of Field Set</inlineHelpText>
    <label>POI Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>