force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__POILatitude__c.field-meta.xml
<CustomField>
    <fullName>sma__POILatitude__c</fullName>
    <label>POI Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>