force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__POILongitude__c.field-meta.xml
<CustomField>
    <fullName>sma__POILongitude__c</fullName>
    <label>POI Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>