force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__POIPhone__c.field-meta.xml
<CustomField>
    <fullName>sma__POIPhone__c</fullName>
    <label>POI Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>