force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__POIPostalCode__c.field-meta.xml
<CustomField>
    <fullName>sma__POIPostalCode__c</fullName>
    <label>POI Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>