force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__POIState__c.field-meta.xml
<CustomField>
    <fullName>sma__POIState__c</fullName>
    <label>POI State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>