force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__POIStateShort__c.field-meta.xml
<CustomField>
    <fullName>sma__POIStateShort__c</fullName>
    <label>POI State Short</label>
    <length>255</length>
    <type>Text</type>
</CustomField>