force-app/main/default/objects/sma__MAClick2Create__c/fields/sma__POIStreet__c.field-meta.xml
<CustomField>
    <fullName>sma__POIStreet__c</fullName>
    <label>POI Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>